# CloudAnnotation

./: CMakeLists.txt  CMakeSettings.json  README.md
include/nlohmann/: json.hpp
src/: AboutDialog.cpp  AboutDialog.hpp  AboutDialog.ui  AbstractCloudPoint.hpp  BoundingBox.cpp  BoundingBox.hpp  CMakeLists.txt  CloudTableModel.cpp  CloudTableModel.hpp  Color.hpp  ErrorCloudPoint.cpp  ErrorCloudPoint.hpp  GraphicalSegmentationDlg.ui  GraphicalSegmentationTool.cpp  GraphicalSegmentationTool.hpp  InteractorStyle.hpp  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  OverlayDialog.hpp  PointCloud.cpp  PointCloud.hpp  PointCloudContainer.cpp  PointCloudContainer.hpp  PointCloudWidget.cpp  PointCloudWidget.hpp  StepRecorder.hpp  icons.qrc  main.cpp
src/Config/: ConfigManage.cpp  ConfigManage.hpp  UserSettings.hpp
src/Container/: AbstractPointCloudContainer.hpp  Color.hpp  ErrorPointCloudContainer.cpp  ErrorPointCloudContainer.hpp  Point3D.hpp  StandardPointCloudContainer.cpp  StandardPointCloudContainer.hpp
src/General/: CoreLib.hpp  CoreLibExport.hpp  GenericProgressCallback.hpp  NormalizedProgress.cpp  NormalizedProgress.hpp  OverlayDialog.cpp  OverlayDialog.hpp  ProgressDialog.cpp  ProgressDialog.hpp
src/Reader/: CsvPiontReader.cpp  CsvPiontReader.hpp
src/Utils/: FileIO.cpp  FileIO.hpp  TypeConvert.hpp
src/images/icon/: ca_icon.rc
src/translations/: cloud_annotation_zh_CN.ts
